--- a/community.redhat_iberia/plugins/filter/message_from_avro.yml
+++ b/community.redhat_iberia/plugins/filter/message_from_avro.yml
@@ -1,5 +1,5 @@
 DOCUMENTATION:
-  name: from_avro
+  name: message_from_avro
   version_added: "1.0.0"
   short_description: Convert Avro binary data back to Python objects
   description:
